examples/test/testpolicy11171.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11171
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key45: value38
      key7: value48
      key31: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value9
          key2: value49
      podSelector:
        matchLabels:
          key30: value4
          key36: value12
